feat: :bug: solucion de debugs